changes as on 6/13 fxmls

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/EasyMIS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.charm-glisten-6.0.0.jar=lib\\charm-glisten-6.0.0.jar
 file.reference.eclipselink-2.6.jar=lib\\eclipselink-2.6.jar
 file.reference.fontawesomefx-8.9.jar=lib\\fontawesomefx-8.9.jar
 file.reference.fontawesomefx-materialicons-2.2.0-9.1.2.jar=lib\\fontawesomefx-materialicons-2.2.0-9.1.2.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.fontawesomefx-materialicons-2.2.0-9.1.2.jar}:\
     ${file.reference.javax.persistence_2.1.1.v201509150925.jar}:\
     ${file.reference.jfoenix-8.0.7.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.7.jar}
+    ${file.reference.sqlite-jdbc-3.8.7.jar}:\
+    ${file.reference.charm-glisten-6.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
